# RecipeSite

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
recipe_site/: db.sqlite3
recipe_site/recipe_site/: settings.py  urls.py
recipe_site/recipes/: admin.py  forms.py  models.py  urls.py  views.py
recipe_site/recipes/migrations/: 0001_initial.py
recipe_site/recipes/static/css/: index.css
recipe_site/recipes/templates/: add_recipe.html  base.html  index.html  recipe_detail.html
recipe_site/staticfiles/css/: add_recipe.css  base.css  login.css
recipe_site/users/: views.py
recipe_site/users/static/css/: registration.css
recipe_site/users/templates/: login.html  registration.html
staticfiles/css/: login.css  recipe_detail.css
