[tool.poetry]
name = "recipe-site"
version = "0.1.0"
description = ""
authors = ["mityashka <dima.kuzkin@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "23.0.0"
django = "5.1.4"
packaging = "24.2"
pillow = "11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
